[workspace]
resolver = "2"
members = [
  # Libraries
  "qb-core",
  "qb-proto",
  "qb-ext",
  # Extensions
  "qb-ext-local",
  "qb-ext-tcp",
  # Binaries
  "qb-daemon",
  # Application Clients
  "qb-cli",

  # Needed for FFI
  "qb-mobile/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
