[workspace]
resolver = "2"
members = [
  # Libraries
  "qb-core",
  "qb-proto",
  "qb-ext",
  "qb-daemon",
  # Extensions
  "qb-ext-local",
  "qb-ext-tcp",
  # Applications
  "qb-app-cli",

  # Needed for FFI
  "qb-mobile/rust", "qb-app-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
