[package]
name = "qb-cli"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
tokio = { version = "1.37.0", features = ["rt", "sync"] }
interprocess = { version = "2.2.0", features = ["tokio"] }
clap = { version = "4.5.9", features = ["derive"] }
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
qb-control = { path = "../qb-control" }
