[package]
name = "qb-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
tokio = { version = "1.37.0", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
] }
interprocess = { version = "2.2.0", features = ["tokio"], optional = true }
tracing-subscriber = "0.3.18"
tracing-panic = "0.1.2"
tracing = "0.1.40"
thiserror = "1.0.63"
clap = { version = "4.5.9", features = ["derive"] }
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
qb-ext = { path = "../qb-ext" }
qb-ext-local = { path = "../qb-ext-local" }
qb-ext-tcp = { path = "../qb-ext-tcp", default-features = false }

[features]
default = ["ipc", "aws_lc_rs"]
ipc = ["dep:interprocess"]
aws_lc_rs = ["qb-ext-tcp/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]
ring = ["qb-ext-tcp/ring"]
