[package]
name = "qb-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
tokio = { version = "1.37.0", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1.40"
thiserror = "1.0.63"
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
qb-ext = { path = "../qb-ext" }
