[package]
name = "qb-ext-tcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
bitcode = "0.6.0"
tracing = "0.1.40"
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
qb-ext = { path = "../qb-ext" }
tokio-rustls = { version = "0.26.0", default-features = false }
rcgen = "0.13.1"
rustls-cert-gen = "0.1.0"
rustls-pemfile = "2.1.3"
webpki-roots = "0.26.3"

[features]
default = ["ring"]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]
ring = ["tokio-rustls/ring"]
