[package]
name = "qb-ext"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.39.2", features = ["sync"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
simdutf8 = "0.1.4"
bitcode = "0.6.3"
hex = "0.4.3"
rand = "0.8.5"
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
