[package]
name = "qb-proto"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simdutf8 = "0.1.4"
thiserror = "1.0.63"
tokio = "1.39.1"
url-search-params = "12.0.0"
