[package]
name = "qb-proto"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
flate2 = "1.0.31"
itertools = "0.13.0"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simdutf8 = "0.1.4"
thiserror = "1.0.63"
tokio = "1.39.1"
serde_bytes = "0.11.15"
tracing = "0.1.40"
url-search-params = "12.0.0"
