# TODO: rename to qb_lib or similar

[package]
name = "qb"
version.workspace = true
edition.workspace = true

[dependencies]
bitcode = "0.6.0"
hex = "0.4.3"
ignore = "0.4.22"
itertools = "0.13.0"
lazy_static = "1.4.0"
sha2 = "0.10.8"
simdutf8 = "0.1.4"
similar = "2.5.0"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["macros", "formatting"] }
tokio = { version = "1.37.0", features = ["rt", "sync"] }
tracing = "0.1.40"
waker-fn = "1.2.0"
