[package]
name = "qbi-socket"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
bitcode = "0.6.0"
tracing = "0.1.40"
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
rustls = "0.23.12"
