[package]
name = "qbi-socket"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
bitcode = "0.6.0"
tracing = "0.1.40"
rustls = "0.23.12"
qb-core = { path = "../qb-core" }
qb-proto = { path = "../qb-proto" }
qb-ext = { path = "../qb-ext" }
tokio-rustls = "0.26.0"
rcgen = "0.13.1"
rustls-cert-gen = "0.1.0"
